--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -15,8 +14,52 @@
     <title>Frontend Mentor | Age calculator app</title>
     <link rel="stylesheet" href="build/css/app.css" />
   </head>
-  <body>
-    <p>Day DD Month MM Year YYYY -- years -- months -- days</p>
+  <body class="bg-lg-grey">
+    <main class="calc">
+      <form class="form">
+        <div class="inputs">
+          <div class="inputs__number">
+            <div class="inputs__input">
+              <label for="day" class="inputs__label">Day</label>
+              <input type="number" id="day" placeholder="DD" />
+            </div>
+
+            <div class="inputs__input">
+              <label for="month" class="inputs__label">Month</label>
+              <input type="number" id="month" placeholder="MM" />
+            </div>
+
+            <div class="inputs__input">
+              <label for="year" class="inputs__label">Year</label>
+              <input type="number" id="year" placeholder="YYYY" />
+            </div>
+          </div>
+
+          <button type="submit" class="inputs__submit">
+            <img
+              class="inputs__arrow"
+              src="assets/images/icon-arrow.svg"
+              alt="arrow"
+            />
+          </button>
+        </div>
+      </form>
+
+      <section class="results" aria-label="Results of calculating age">
+        <p class="results__result">
+          <span class="results__number" id="result-year">- -</span> years
+        </p>
+
+        <p class="results__result">
+          <span class="results__number" id="result-year">- -</span> months
+        </p>
+
+        <p class="results__result">
+          <span class="results__number" id="result-year">- -</span> days
+        </p>
+      </section>
+    </main>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
