base for mobile built

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Frontend Mentor | Age calculator app</title>
     <link rel="stylesheet" href="build/css/app.css" />
   </head>
-  <body class="bg-lg-grey">
-    <main class="calc">
+  <body class="bg-off-white hg-100-vh content-center">
+    <main class="calc container content-center">
       <form class="form">
         <div class="inputs">
           <div class="inputs__number">
@@ -60,11 +60,13 @@
       </section>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <footer class="attribution">
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Sergio Cruz</a>.
+      </p>
+    </footer>
   </body>
 </html>
