tablet css built

--- a/index.html
+++ b/index.html
@@ -15,24 +15,39 @@
     <link rel="stylesheet" href="build/css/app.css" />
   </head>
   <body class="bg-off-white">
-    <main class="content-center hg-100-vh">
+    <main class="content-center hg-100-vh pd-tablet-15">
       <div class="calc container">
         <form class="form">
           <div class="inputs">
             <div class="inputs__number">
               <div class="inputs__input">
                 <label for="day" class="inputs__label">Day</label>
-                <input type="number" id="day" placeholder="DD" />
+                <input
+                  class="inputs__input-num"
+                  type="number"
+                  id="day"
+                  placeholder="DD"
+                />
               </div>
 
               <div class="inputs__input">
                 <label for="month" class="inputs__label">Month</label>
-                <input type="number" id="month" placeholder="MM" />
+                <input
+                  class="inputs__input-num"
+                  type="number"
+                  id="month"
+                  placeholder="MM"
+                />
               </div>
 
               <div class="inputs__input">
                 <label for="year" class="inputs__label">Year</label>
-                <input type="number" id="year" placeholder="YYYY" />
+                <input
+                  class="inputs__input-num"
+                  type="number"
+                  id="year"
+                  placeholder="YYYY"
+                />
               </div>
             </div>
 
@@ -50,15 +65,15 @@
 
         <section class="results" aria-label="Results of calculating age">
           <p class="results__result">
-            <span class="results__number" id="result-year">38</span>years
+            <span class="results__number" id="result-year">- -</span>years
           </p>
 
           <p class="results__result">
-            <span class="results__number" id="result-year">3</span>months
+            <span class="results__number" id="result-year">- -</span>months
           </p>
 
           <p class="results__result">
-            <span class="results__number" id="result-year">26</span>days
+            <span class="results__number" id="result-year">- -</span>days
           </p>
         </section>
       </div>
