--- a/index.html
+++ b/index.html
@@ -79,12 +79,21 @@
       </div>
     </main>
 
-    <footer class="attribution">
-      <p>
+    <footer class="footer">
+      <p class="footer__paragraph">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          class="footer__front footer__link"
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Sergio Cruz</a>.
+        >. Coded by
+        <a
+          href="https://github.com/SergioCzP"
+          target="_blank"
+          class="footer__author footer__link"
+          >Sergio Cruz</a
+        >.
       </p>
     </footer>
   </body>
