--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
           </p>
 
           <p class="results__result">
-            <span class="results__number" id="result-year">- -</span>months
+            <span class="results__number" id="result-month">- -</span>months
           </p>
 
           <p class="results__result">
-            <span class="results__number" id="result-year">- -</span>days
+            <span class="results__number" id="result-day">- -</span>days
           </p>
         </section>
       </div>
